﻿
========== V 0 - 14/11 ==========
- Mise en place du GIT
- Ajout du sujet
- Création du fichier .c
- Création du changelog
- Création du Makefile
- Importation du Makefile de test (MakefileProf)
- Importation d'un fichier contenant la sortie normale (TestFile.txt)
- Création du rapport

========== V 0.1- 14/11 ==========
-Déclarations des prototypes
-Mise en place des fonctions (vides)
-Première version du main

========== V 0.1- 16/11 ==========
-Mise en forme du rapport
-Introduction


========== V 0.2- 22/11 ==========
- Utilisation getOpt
- Création de la méthode d'aide

========== V 0.3- 23/11 ==========
- Création de lancer

_________________________________________________________________________________