@@ -26,4 +26,8 @@
 ========== V 0.3- 23/11 ==========
 - Création de lancer
 
+========== V 0.3- 23/11 ==========
+- Création de parcourir
+- Améliorations de lancer
+
 _________________________________________________________________________________
